--- a/common_ui_project/build.gradle
+++ b/common_ui_project/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
+    //compile 'com.antonionicolaspina:revealtextview:2.0'
 }
