--- a/common_ui_project/src/main/AndroidManifest.xml
+++ b/common_ui_project/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
             android:screenOrientation="portrait">
 
         </activity>
+
+        <activity
+            android:name=".RevealTextActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
     </application>
 
 </manifest>
