--- a/common_ui_project/build.gradle
+++ b/common_ui_project/build.gradle
@@ -35,8 +35,13 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
+    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:design:22.2.0'
+    // RevealTextView
     //compile 'com.antonionicolaspina:revealtextview:2.0'
     // 炫酷的加载效果
     compile 'com.wang.avi:library:1.0.2'
     compile 'com.nineoldandroids:library:2.4.0'
+    // 自定义EditText--https://github.com/rengwuxian/MaterialEditText
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
 }
