--- a/common_ui_project/src/main/AndroidManifest.xml
+++ b/common_ui_project/src/main/AndroidManifest.xml
@@ -52,6 +52,24 @@
             android:screenOrientation="portrait">
 
         </activity>
+
+        <activity
+            android:name=".EditTextActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
+
+        <activity
+            android:name=".ScrollViewActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
+
+        <activity
+            android:name=".PercentLayoutActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
     </application>
 
 </manifest>
