2016-03-08 15:38 Ultra Pull To Refresh

--- a/common_ui_project/src/main/AndroidManifest.xml
+++ b/common_ui_project/src/main/AndroidManifest.xml
@@ -70,6 +70,12 @@
             android:screenOrientation="portrait">
 
         </activity>
+
+        <activity
+            android:name=".PullListViewActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
     </application>
 
 </manifest>
